# OpenCVTest

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pre_image.cpp
app/src/main/java/com/example/opencvtest/: MainActivity.java
app/src/main/java/com/example/opencvtest/util/: ScaleImageView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
